--- a/index.html
+++ b/index.html
@@ -88,6 +88,53 @@
     <!-- /.container -->
   </section>
   <!-- /.main -->
+  <div class="overlay">
+    <div class="popup">
+      <div class="popup-title">Форма обратной связи</div>
+      <!-- /.popup-title -->
+      <div class="popup-close">&times;</div>
+      <!-- /.popup-close -->
+      <div class="popup-form">
+        <form action="#" class="main-form">
+          <div class="popup-form-header">
+            Получите индивидуальное предложение
+            <span>на производство и поставку изделий</span>
+            <label for="phone" class="popup-form__label"
+            >Введите ваш номер телефона:</label>
+            <input type="text" class="popup-form__input" name="phone" required>
+            <button class="button popup-form__btn">Оставить заявку!</button>
+            <div class="popup-form__note">
+              *Минимальный заказ 500шт
+            </div>
+          </div>
+        </form>
+      </div>
+      <!-- /.popup-form -->
+    </div>
+    <!-- /.popup -->
+  </div>
+  <!-- /.overlay -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="jquery.min.js"><\/script>')</script>
+  <script src="jquery.maskedinput.js" type="text/javascript"></script>
+  <script>
+  jQuery(function($){
+   $("#phone").mask("(999) 999-9999");
+  });
+  </script>
+  <script>
+  $(document).ready(function(){
+    $('.header-contacts__button').on("click", function(){
+        $('.overlay').show();
+    });
+
+    $('.popup-close').on("click", function(){
+      $('.overlay').hide();
+    });
+  });
+  </script>
+
 </body>
+
 
 </html>
